[gd_scene load_steps=10 format=3 uid="uid://3mj6loxsdhqo"]

[ext_resource type="Theme" uid="uid://b8g8kbg8v1jss" path="res://assets/resources/main_control.tres" id="1_0ekj5"]
[ext_resource type="PackedScene" uid="uid://b1s38f850ahr1" path="res://audio/audio_capture.tscn" id="1_8p87a"]
[ext_resource type="Script" path="res://ui/main_control.gd" id="2_b8u4u"]
[ext_resource type="Script" path="res://ui/mic_option.gd" id="4_fmnfy"]
[ext_resource type="PackedScene" uid="uid://dytye1t2s20f3" path="res://ui/common_gui_container.tscn" id="4_qipqv"]
[ext_resource type="Script" path="res://ui/options.gd" id="5_pnjq0"]
[ext_resource type="PackedScene" uid="uid://o7hcofgkuwos" path="res://audio/audio_processor.tscn" id="5_y5haa"]
[ext_resource type="PackedScene" uid="uid://lyplfb3bi7an" path="res://audio/audio_recorder.tscn" id="6_7iaat"]
[ext_resource type="PackedScene" uid="uid://dpl887j0d4nbi" path="res://websocket/client_console.tscn" id="8_cp405"]

[node name="MainControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0ekj5")
script = ExtResource("2_b8u4u")
metadata/_edit_lock_ = true

[node name="AudioCapture" parent="." instance=ExtResource("1_8p87a")]

[node name="RecordPlayer" type="AudioStreamPlayer" parent="."]

[node name="LeftGUI" type="Control" parent="."]
anchors_preset = 0
offset_right = 400.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="LeftGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.196078, 0.219608, 0.384314)

[node name="Margin" type="MarginContainer" parent="LeftGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Content" type="VBoxContainer" parent="LeftGUI/Margin"]
layout_mode = 2

[node name="Options" parent="LeftGUI/Margin/Content" instance=ExtResource("4_qipqv")]
layout_mode = 2
script = ExtResource("5_pnjq0")

[node name="Label" parent="LeftGUI/Margin/Content/Options/Content" index="0"]
text = "Options"

[node name="MicOption" type="HBoxContainer" parent="LeftGUI/Margin/Content/Options/Content" index="2"]
layout_mode = 2
script = ExtResource("4_fmnfy")

[node name="Label" type="Label" parent="LeftGUI/Margin/Content/Options/Content/MicOption"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Current Microphone"

[node name="MicOptionButton" type="OptionButton" parent="LeftGUI/Margin/Content/Options/Content/MicOption"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
clip_text = true

[node name="MuteOption" type="HBoxContainer" parent="LeftGUI/Margin/Content/Options/Content" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="LeftGUI/Margin/Content/Options/Content/MuteOption"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Mute"

[node name="MuteButton" type="CheckButton" parent="LeftGUI/Margin/Content/Options/Content/MuteOption"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
button_pressed = true
text = "On"

[node name="AmpControl" type="HBoxContainer" parent="LeftGUI/Margin/Content/Options/Content" index="4"]
layout_mode = 2

[node name="Label" type="Label" parent="LeftGUI/Margin/Content/Options/Content/AmpControl"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Amplification
"

[node name="AmpSpinBox" type="SpinBox" parent="LeftGUI/Margin/Content/Options/Content/AmpControl"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
max_value = 5.0
step = 0.2
value = 1.0
alignment = 1

[node name="ThresholdControl" type="HBoxContainer" parent="LeftGUI/Margin/Content/Options/Content" index="5"]
layout_mode = 2

[node name="Label" type="Label" parent="LeftGUI/Margin/Content/Options/Content/ThresholdControl"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Amp Threshold
"

[node name="SpinBox" type="SpinBox" parent="LeftGUI/Margin/Content/Options/Content/ThresholdControl"]
custom_minimum_size = Vector2(120, 30)
layout_direction = 2
layout_mode = 2
max_value = 0.01
step = 0.001
value = 0.005
alignment = 1

[node name="HSeparator" type="HSeparator" parent="LeftGUI/Margin/Content"]
layout_mode = 2

[node name="ClientConsole" parent="LeftGUI/Margin/Content" instance=ExtResource("8_cp405")]
layout_mode = 2
size_flags_vertical = 3

[node name="RightGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 752.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="RightGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.196078, 0.219608, 0.384314)

[node name="Margin" type="MarginContainer" parent="RightGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Content" type="VBoxContainer" parent="RightGUI/Margin"]
layout_mode = 2

[node name="AudioProcessor" parent="RightGUI/Margin/Content" instance=ExtResource("5_y5haa")]
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="RightGUI/Margin/Content"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="RightGUI/Margin/Content"]
layout_mode = 2

[node name="AudioRecorder" parent="RightGUI/Margin/Content" instance=ExtResource("6_7iaat")]
layout_mode = 2

[connection signal="item_selected" from="LeftGUI/Margin/Content/Options/Content/MicOption/MicOptionButton" to="LeftGUI/Margin/Content/Options" method="_on_mic_option_button_item_selected"]
[connection signal="toggled" from="LeftGUI/Margin/Content/Options/Content/MuteOption/MuteButton" to="AudioCapture" method="_on_mute_button_toggled"]
[connection signal="toggled" from="LeftGUI/Margin/Content/Options/Content/MuteOption/MuteButton" to="LeftGUI/Margin/Content/Options" method="_on_mute_button_toggled"]
[connection signal="value_changed" from="LeftGUI/Margin/Content/Options/Content/AmpControl/AmpSpinBox" to="AudioCapture" method="_on_amp_spin_box_value_changed"]
[connection signal="value_changed" from="LeftGUI/Margin/Content/Options/Content/ThresholdControl/SpinBox" to="RightGUI/Margin/Content/AudioProcessor" method="_on_spin_box_value_changed"]
[connection signal="frames_captured" from="RightGUI/Margin/Content/AudioProcessor" to="LeftGUI/Margin/Content/ClientConsole" method="_on_audio_processor_frames_captured"]

[editable path="LeftGUI/Margin/Content/Options"]
